--- a/gestaodegastos-cm/pom.xml
+++ b/gestaodegastos-cm/pom.xml
@@ -9,17 +9,20 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.gestaodegastos</groupId>
-	<artifactId>gestaodegastos-api</artifactId>
+	<artifactId>gestaodegastos-cm</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gestaodegastos-api</name>
-	<description>API que recebe as requisições do containner da aplicação.</description>
+	<name>gestaodegastos-cm</name>
+	<description>Aplicação Comand Model</description>
 
 	<properties>
 		<java.version>12</java.version>
 	</properties>
 
 	<dependencies>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -37,14 +40,6 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
