--- a/gestaodegastos-cm/src/main/resources/application.properties
+++ b/gestaodegastos-cm/src/main/resources/application.properties
@@ -1,15 +1,24 @@
 server.port=8082
 
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+#Configurando Base de Dados
+spring.datasource.url=jdbc:mysql://localhost:3307/gestaodegastos?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
+#Configurando JPA E Dialeto do Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+#Configurando Flyway
+spring.flyway.locations=classpath:db/migration
+
+#Configurando RabbitMq
 rabbitmq.host=localhost
 rabbitmq.port=5672
 rabbitmq.username=guest
 rabbitmq.password=guest
 
+#Configurando Filas do RabbitMq
 fila.obterGasto=obterGasto
 fila.gasto=gasto
 fila.listarGastos=listarGastos
