Comunicação completa entre microservices

--- a/gestaodegastos-api/src/main/resources/application.properties
+++ b/gestaodegastos-api/src/main/resources/application.properties
@@ -6,9 +6,7 @@ rabbitmq.username=guest
 rabbitmq.password=guest
 
 #Configurando Filas do RabbitMq
+fila.cadastrarGasto=cadastrarGasto
 fila.obterGasto=obterGasto
-fila.gasto=gasto
 fila.listarGastos=listarGastos
-fila.gastos=gastos
 fila.listarCategorias=listarCategorias
-fila.categorias=categorias
